--- a/video/index.html
+++ b/video/index.html
@@ -16,7 +16,7 @@
         <video class="video-container" muted autoplay loop>
             <source src="./video.mp4" type="video/mp4" />
         </video>
-        <h1>video project</h1>
+        <h1>vishwa 😎 🚀</h1>
         <button class="switch-btn">
             <span>play</span>
             <span>pause</span>
